# resourcecalculator

./: .gitignore  BuildOnLinux.sh  CMakeLists.txt  ConfigureWindows2015.cmd  MSVC_2019_Community.cmd  MSVC_2019_Community_ConfigureOnly.cmd
!Scripts/: Deploy64.cmd  FindQT.cmd  Linux_generate.sh  Win32_Generate_SLN_Auto_and_Build.cmd  Win32_Run.cmd  Win64_Generate_SLN_Auto_and_Build.cmd  Win64_Run.cmd  config32.cmd  config64.cmd  set_environment.cmd
.github/workflows/: ccpp.yml
CMake/: CMakeDownload.cmake  GiveMePath.cmake  template.vcxproj.user_path_workdir
FactorioCalculator/: CMakeLists.txt  Factory.cpp  Factory.h  Item.cpp  Item.h  ItemCollection.cpp  ItemCollection.h  Recipe.cpp  Recipe.h  RecipeCollection.cpp  RecipeCollection.h  Types.cpp  Types.h
FactorioImport/: CMakeLists.txt  Convert.cpp  Convert.h  ParseElements.cpp  ParseElements.h  ParseLog.cpp  ParseLog.h
FactorioImport/FactorioImportEXE/: CMakeLists.txt  main.cpp
Interface/: CMakeLists.txt  FactoryTypesEditDialog.cpp  FactoryTypesEditDialog.h  FactorysEditDialog.cpp  FactorysEditDialog.h  FactorysModel.cpp  FactorysModel.h  FactorysTypesModel.cpp  FactorysTypesModel.h  FactorysTypesSelectedDialog.cpp  FactorysTypesSelectedDialog.h  IconDispatcherDialog.cpp  IconDispatcherDialog.h  IconSelectedDialog.cpp  IconSelectedDialog.h  ItemSelectedDialog.cpp  ItemSelectedDialog.h  ItemsEditDialog.cpp  ItemsEditDialog.h  ItemsModel.cpp  ItemsModel.h  ModuleSelectDialog.cpp  ModuleSelectDialog.h  ModulesEditDialog.cpp  ModulesEditDialog.h  ModulesModel.cpp  ModulesModel.h  ModulesSelectDialog.cpp  ModulesSelectDialog.h  ProductionChainTabWidget.cpp  ProductionChainTabWidget.h  ProductionChainTreeModel.cpp  ProductionChainTreeModel.h  ProductionChainWidget.cpp  ProductionChainWidget.h  ProductionChainWidgetBase.cpp  ProductionChainWidgetBase.h  ProductionChainWidgetSummProductionItems.cpp  ProductionChainWidgetSummProductionItems.h  RecipesEditDialog.cpp  (+12 more)
Interface/Res/: Icons.json
Interface/Windows/: CMakeLists.txt  FactoryTypesEditDialog.cpp  FactoryTypesEditDialog.h  FactorysEditDialog.cpp  FactorysEditDialog.h  IconDispatcherDialog.cpp  IconDispatcherDialog.h  IconSelectedDialog.cpp  IconSelectedDialog.h  ItemSelectedDialog.cpp  ItemSelectedDialog.h  ItemsEditDialog.cpp  ItemsEditDialog.h  ModuleSelectDialog.cpp  ModuleSelectDialog.h  ModulesEditDialog.cpp  ModulesEditDialog.h  ModulesSelectDialog.cpp  ModulesSelectDialog.h  ProductionChainTabWidget.cpp  ProductionChainTabWidget.h  ProductionChainTreeModel.cpp  ProductionChainTreeModel.h  ProductionChainWidget.cpp  ProductionChainWidget.h  ProductionChainWidgetBase.cpp  ProductionChainWidgetBase.h  ProductionChainWidgetSummProductionItems.cpp  ProductionChainWidgetSummProductionItems.h  RecipeAddDialog.cpp  RecipeAddDialog.h  RecipeModel.cpp  RecipeModel.h  RecipeWidget.cpp  RecipeWidget.h  RecipesEditDialog.cpp  RecipesEditDialog.h  RecipesWindow.cpp  RecipesWindow.h  ResurceGui.qrc  (+7 more)
Interface/Windows/Res/: Icons.json
Interface/Windows/translations/: ResurceWin_ru_RU.ts
Interface/translations/: ResurceWin_ru_RU.ts
Program/: CMakeLists.txt
ResourceCalculator/: CMakeLists.txt  Factory.cpp  Factory.h  FactoryCollection.cpp  FactoryCollection.h  Icon.cpp  Icon.h  IconCollection.cpp  IconCollection.h  Item.cpp  Item.h  ItemCollection.cpp  ItemCollection.h  Module.cpp  Module.h  ModuleCollection.cpp  ModuleCollection.h  ParamsCollection.cpp  ParamsCollection.h  ProductionChainCollection.cpp  ProductionChainCollection.h  ProductionChainModel.cpp  ProductionChainModel.h  ProductionChainTree.cpp  ProductionChainTree.h  Recipe.cpp  Recipe.h  RecipeCollection.cpp  RecipeCollection.h  Serializer.h  TestInit.cpp  TestInit.h  TransportBelt.cpp  TransportBelt.h  TransportBeltCollection.cpp  TransportBeltCollection.h  Types.cpp  Types.h
Tests/: CMakeLists.txt
Tests/Test1/: CMakeLists.txt  main.cpp
Tests/Test2/: CMakeLists.txt  main.cpp
Tests/TestUnZip/: CMakeLists.txt  main.cpp
Tests/TestZLib/: CMakeLists.txt
ThreeParty/: CMakeLists.txt
ThreeParty/Base64/: CMakeLists.txt  base64.cpp  base64.h
ThreeParty/JsonCpp/: CMakeLists.txt
ThreeParty/JsonCpp/include/json/: config.h  reader.h  value.h
ThreeParty/JsonCpp/src/: json_reader.cpp  json_value.cpp  json_writer.cpp
WorkDir/: Factorio.json
WorkDir/Factorio/mods/recipelister_2.6.1/: control.lua  data-final-fixes.lua  info.json  settings.lua
WorkDir/Factorio/mods/recipelister_2.6.1/locale/en/: en.cfg
